Remove bounds check