@@ -3,13 +3,26 @@ package vecxt.benchmark
 import org.openjdk.jmh.annotations.*
 import org.openjdk.jmh.infra.Blackhole
 // import vecxt.Matrix.*
-import vecxt.BoundsCheck
+
 import scala.compiletime.uninitialized
 import vecxt.all.*
 import jdk.incubator.vector.VectorSpecies
 import jdk.incubator.vector.VectorOperators
 import jdk.incubator.vector.DoubleVector
 
+/**
+ * 2026-07-28 github devcontainer
+
+SumBenchmark.sum_loop          3  thrpt    3  509392485.880 ±  28476794.438  ops/s
+SumBenchmark.sum_loop        100  thrpt    3   22388541.489 ±   1070438.908  ops/s
+SumBenchmark.sum_loop     100000  thrpt    3      10597.404 ±        81.607  ops/s
+SumBenchmark.sum_vec_alt       3  thrpt    3  453626173.485 ± 643778788.723  ops/s
+SumBenchmark.sum_vec_alt     100  thrpt    3  106150826.931 ±  72101397.367  ops/s
+SumBenchmark.sum_vec_alt  100000  thrpt    3      42300.013 ±       493.449  ops/s
+*/
+
+
+// ./mill benchmark.runJmh vecxt.benchmark.SumBenchmark -jvmArgs --add-modules=jdk.incubator.vector -rf json
 @State(Scope.Thread)
 class SumBenchmark extends BLASBenchmark:
 
@@ -29,6 +42,9 @@ class SumBenchmark extends BLASBenchmark:
 
   extension (vec: Array[Double])
 
+    /** 
+     * Left packing it hard in SIMD land. This is not a good strategy - does not benchmark well.
+     */
     inline def sum2 =
       var sum: Double = 0.0
       var i: Int = 0
@@ -65,11 +81,11 @@ class SumBenchmark extends BLASBenchmark:
     bh.consume(r);
   end sum_loop
 
-  @Benchmark
-  def sum_vec(bh: Blackhole) =
-    val r = arr.sum2
-    bh.consume(r);
-  end sum_vec
+  // @Benchmark
+  // def sum_vec(bh: Blackhole) =
+  //   val r = arr.sum2
+  //   bh.consume(r);
+  // end sum_vec
 
   @Benchmark
   def sum_vec_alt(bh: Blackhole) =
